<resources>
    <string name="app_name">Instagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="descrption">Descrption</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="feed">Feed</string>
    <string name="post">Post</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>