<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeFragment">


    <include layout="@layout/toolbar_inapp" />


    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostImage"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/descrption"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnCaptureImage"
        app:cornerRadius="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#0080FF"
        android:text="@string/take_picture"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#0080FF"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:cornerRadius="12dp" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_below="@+id/btnCaptureImage"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        tools:srcCompat="@tools:sample/avatars" />

</RelativeLayout>